[tool.poetry]
name = "typeloader2"
version = "2.13.2"
description = "full-length allele submission handler for KLA, KIR, and other immunogenetically relevant genes"
authors = ["Bianca Schöne <schoene@dkms-lab.de>",
"Vineeth Surendranath <surendranath@dkms-lab.de>",
"Markus Fuhrmann <fuhrmann@dkms-lab.de"]
maintainers = ["Bianca Schöne <schoene@dkms-lab.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/DKMS-LSL/typeloader"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
PyQt5 = "^5.15.9"
Biopython = "^1.81"
xmltodict = "^0.13.0"
playsound = "1.2.2"
cx_Freeze = "^6.14.4"
cx_Oracle = "^8.3.0"
packaging = "^23.0"
requests = "^2.28.2"

[build-system]
requires = ["poetry>=1.3.2"]
build-backend = "poetry.masonry.api"
