[tool.poetry]
name = "typeloader2"
version = "2.14.0-RC1"
description = "full-length allele submission handler for KLA, KIR, and other immunogenetically relevant genes"
authors = ["Bianca Schöne <schoene@dkms-lab.de>",
"Vineeth Surendranath <surendranath@dkms-lab.de>",
"Markus Fuhrmann <fuhrmann@dkms-lab.de"]
maintainers = ["Bianca Schöne <schoene@dkms-lab.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/DKMS-LSL/typeloader"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
PyQt5 = "^5.15"
Biopython = "^1.81"
xmltodict = "^0.13"
playsound = "1.2.2"
cx_Freeze = "^6.15"
cx_Oracle = "^8.3"
packaging = "^23.1"
requests = "^2.31"

[build-system]
requires = ["poetry>=1.3.2"]
build-backend = "poetry.masonry.api"
